Fix width of 'what we offer' elements to prevent unexpected wrapping at screen size 801px - 814px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -718,7 +718,7 @@ footer {
     }
 
     .what-we-offer-inner-wrapper {
-        width: 40%;
+        width: 38%;
     }
 }
 
